--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "ember-cli-simple-auth-token": "^0.6.0",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.15",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "torii": "^0.3.2"
   }
 }
